# ZQCNN_Android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: zqcnn_jni.cpp  zqcnn_mtcnn.cpp  zqcnn_mtcnn.h  zqcnn_mtcnn_nchwc4.cpp  zqcnn_mtcnn_nchwc4.h  zqcnn_mtcnn_nchwc4_jni.cpp  zqcnn_ssd.cpp  zqcnn_ssd.h  zqcnn_ssd_jni.cpp
app/src/main/cpp/include/: openblas_config.h
app/src/main/java/com/zl/demo/: CameraActivity.java  FaceInfo.java  MTCNNNCHWC.java  MainActivity.java  ZQCNNSSD.java  ZQMTCNN.java
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
